packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unknown_field_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      23
    ],
    "items": 4
  }
]
