packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unknown_hash_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      11,
      22
    ],
    "items": 2
  }
]
