packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unknown_in_quote_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      3,
      15
    ],
    "items": 2
  }
]
