packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_equation_at_eof_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      43,
      48
    ],
    "items": 3
  }
]
