packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_equation_at_start_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      5
    ],
    "items": 3
  },
  {
    "range": [
      61,
      64
    ],
    "items": 2
  }
]
