packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_equation_only_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      12
    ],
    "items": 6
  }
]
