packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_field_access_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      23,
      46
    ],
    "items": 4
  }
]
