packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_links_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      181,
      184
    ],
    "items": 4
  }
]
