packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_math_aligned_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      12,
      26
    ],
    "items": 8
  }
]
